# mlsdm-governed-cognitive-memory

./: .coverage  .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  =5.9.0  APHASIA_SPEC.md  API_OVERVIEW.md  API_REFERENCE.md  ARCHITECTURAL_REVIEW_SUMMARY.md  ARCHITECTURE_SPEC.md  AUDIT_REGISTER.md  BIBLIOGRAPHY.md  CHANGELOG.md  CI_CD_FIXES_SUMMARY.md  CI_GUIDE.md  CI_QUALITY_POLICY.md  CI_STABILITY_FIX_SUMMARY.md  CLAIMS_TRACEABILITY.md  COMPONENT_TEST_MATRIX.md  CONFIGURATION_GUIDE.md  CONFIGURATION_IMPROVEMENTS_SUMMARY.md  CONTRIBUTING.md  CORE_IMPLEMENTATION_VALIDATION.md  COVERAGE_REPORT.md  COVERAGE_REPORT_2025.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_IMPROVEMENTS_BACKLOG.md  DOCUMENTATION_INDEX.md  Dockerfile.neuro-engine-service  EFFECTIVENESS_VALIDATION_REPORT.md  ENGINEERING_READINESS_ANALYSIS.md  EVIDENCE.md  FIXES_APPLIED.md  GETTING_STARTED.md  HARDENING_2025Q4_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_INTEGRATIONS.md  INTEGRATIONS_CRITICAL.md  (+70 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SETUP_SUMMARY.md  WORKFLOWS.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: aphasia-ci.yml  badges.yml  build.yml  chaos-tests.yml  ci-gate-check.yml.example  ci-neuro-cognitive-engine.yml  ci-smoke.yml  ci-tests.yml  ci.yml  citation-integrity.yml  codeql-analysis.yml  codeql.yml  coverage-badge.yml  dependency-review.yml  dependency-scan.yml  deploy-with-rollback.yml  docs.yml  labeler.yml  load-tests.yml  perf-resilience.yml  performance-tests.yml  pip-audit-scheduled.yml  pr-validation.yml  prod-gate.yml  property-tests.yml  readiness-evidence.yml  readiness.yml  release.yml  sast-scan.yml  sbom.yml  trusted-pr-auto-approve.yml  unicode-controls-check.yml
artifacts/: env_report.txt
artifacts/baseline/: commands_source.txt  errors_summary.txt  pip_freeze.txt  pip_version.txt  uname.txt
artifacts/evidence/: README.md
benchmarks/: benchmark_embedding_cache.py  benchmark_fractal_pelm_gpu.py  measure_memory_footprint.py  test_neuro_engine_performance.py
config/: calibration.py  default.yaml  default_config.yaml  neurolang_grammar.pt  production-ready.yaml  production.yaml
deploy/docker/: docker-compose.production.yaml
deploy/grafana/: mlsdm_observability_dashboard.json  mlsdm_slo_dashboard.json
deploy/k8s/: canary-deployment.yaml  configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  network-policy.yaml  production-deployment.yaml  secrets.yaml  service-monitor.yaml
deploy/monitoring/: alertmanager-rules.yaml  grafana-dashboard.json
deploy/scripts/: validate-manifests.sh
docker/: Dockerfile  docker-compose.yaml
docs/: ALIGNMENT_AND_SAFETY_FOUNDATIONS.md  APHASIA_OBSERVABILITY.md  APHASIA_SPEC.md  API_CONTRACT.md  API_HTTP.md  API_engine_contract.md  API_event.md  API_speech_governance.md  ARCHITECTURE_CONFIG.md  ARCHITECTURE_HYGIENE_POLICY.md  ARCHITECTURE_HYGIENE_REGISTER.md  ARCHITECTURE_SPEC.md  AUDIT_REGISTER.md  CALIBRATION_MAP.md  CALIBRATION_PROTOCOL.md  CI_CD.md  CI_GATE_AUDIT_REPORT.md  CI_GATE_IMPLEMENTATION_SUMMARY.md  CI_GUIDE.md  CI_NEURO_ENGINE.md  CI_PERF_RESILIENCE_GATE.md  CI_SECURITY_GATING.md  COMPONENT_TEST_MATRIX.md  CONFIGURATION_GUIDE.md  DEBT_PREVENTION_POLICY.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  ENGINEERING_DEFICIENCIES_REGISTER.md  ENTRYPOINTS.md  EVAL_moral_filter.md  FORMAL_INVARIANTS.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INVARIANT_TRACEABILITY.md  LLM_ADAPTERS_AND_FACTORY.md  LLM_ADAPTERS_AND_ROUTER.md  LLM_PIPELINE.md  MATH_MODEL.md  METRICS_SOURCE.md  MLSDM_POSITIONING.md  (+25 more)
docs/adr/: 0000-adr-template.md  0001-use-adrs.md  0002-pelm-design.md  0003-moral-filter.md  0004-memory-bounds.md  0005-configuration-layer.md  0007-policy-single-source-of-truth.md  0007-policy-source-of-truth.md
docs/bibliography/: LITERATURE_MAP.md  README.md  REFERENCES.bib  REFERENCES_APA7.md  VERIFICATION.md
docs/ci/: REPOSITORY_GUARDRAILS.md
docs/neuro_ai/: ITERATION_LOOP.md
docs/status/: READINESS.md  README.md
evals/: moral_filter_runner.py
examples/: ab_test_customer_support.py  ci_gate_demo.py  docker-compose.neuro-engine.yml  example_agent_integration.py  example_anthropic_adapter.py  example_conversational_assistant.py  example_sdk_local.py  example_sdk_remote.py  http_inference_example.py  llm_wrapper_example.py  minimal_example.py  minimal_memory_demo.py  neuro_engine_cli_demo.py  observability_logger_example.py  print_metrics_snapshot.py  production_chatbot_example.py  role_boundary_controller_demo.py  run_neuro_service.py  smoke_test_neurolang.py
policies/: README.md
policies/ci/: workflows.rego
policies/yaml/: observability-slo.yaml  security-baseline.yaml
policy/: debt_prevention_thresholds.json  observability-slo.yaml  policy_drift_approval.json  security-baseline.yaml
reports/: .gitkeep
reports/ablation/: .gitkeep
scripts/: __init__.py  check_benchmark_drift.py  check_bidi.py  check_dependency_drift.py  check_no_bidi_unicode.py  check_no_unicode_controls.py  ci_perf_resilience_gate.py  dev_smoke_tests.sh  export_openapi.py  generate_effectiveness_charts.py  git_changed_files.py  openapi_contract_check.py  profile_performance.py  readiness_check.py  release_checklist.md  run_aphasia_eval.py  run_calibration_benchmarks.py  run_effectiveness_suite.py  security_audit.py  smoke_neurolang_wrapper.py  test_package_install.py  test_security_features.py  train_neurolang_grammar.py  validate_bibliography.py  validate_coverage_95.py  validate_examples_compile.py  validate_policy_config.py  verify_ci_parity.py  verify_core_implementation.sh  verify_workflow_alignment.py
scripts/ci/: __init__.py  check_single_entrypoint.py  determinism_check.py  docs_lint.py  export_requirements.py  failure_intelligence.py  generate_evidence_inputs.py  logging_hygiene.py  no_generated_artifacts.py  (+1 more)
src/: __init__.py  main.py  manager.py
tests/: README.md  conftest.py  test_canonical_entrypoint_smoke.py  test_serve_entrypoint.py
(+562 files in other folders)
