# ====================================================
# MLSDM Governed Cognitive Memory - Project Configuration
# ====================================================

[project]
name = "mlsdm-governed-cognitive-memory"
version = "1.2.0"
description = "Production-ready neurobiologically-grounded cognitive architecture with moral governance"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "neuron7x", email = "neuron7x@users.noreply.github.com"}
]
maintainers = [
    {name = "neuron7x", email = "neuron7x@users.noreply.github.com"}
]
keywords = [
    "cognitive-architecture",
    "neuromorphic",
    "moral-governance",
    "memory-systems",
    "ai-safety",
    "llm-wrapper",
    "circadian-rhythm",
    "phase-entangled-memory"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10,<3.13"
dependencies = [
    # Core numerical computing
    "numpy>=2.0.0,<3.0.0",
    # Web framework and server
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn>=0.29.0,<1.0.0",
    "starlette>=0.37.0,<1.0.0",
    # Data validation and configuration
    "pydantic>=2.0.0,<3.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    # Observability and monitoring
    "prometheus-client>=0.20.0,<1.0.0",
    # Resilience and utilities
    "tenacity>=8.2.3,<9.0.0",
    "psutil>=5.9.0,<6.0.0",
    # HTTP client for LLM adapters and webhooks
    "requests>=2.32.3,<3.0.0",
    # Type extensions for backwards compatibility
    "typing-extensions>=4.0.0,<5.0.0",
]

[project.optional-dependencies]
# Distributed tracing and telemetry
observability = [
    "opentelemetry-api>=1.24.0,<2.0.0",
    "opentelemetry-sdk>=1.24.0,<2.0.0",
]

# Neural language processing with PyTorch (Aphasia-Broca extension)
neurolang = [
    "torch>=2.0.0,<3.0.0",
]

# Optional LLM provider integrations
llm-providers = [
    "openai>=1.0.0,<2.0.0",
    "anthropic>=0.30.0,<1.0.0",
]

# Optional cache backends and authentication
storage = [
    "redis>=5.0.0,<6.0.0",
]

# Optional authentication (OIDC/JWT)
auth = [
    "pyjwt>=2.8.0,<3.0.0",
]

# Optional embeddings (sentence-transformers is heavy, only install if needed)
embeddings = [
    "sentence-transformers>=3.0.0,<4.0.0",
]

# Testing dependencies
test = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "hypothesis>=6.98.3,<7.0.0",
    "httpx>=0.27.0,<1.0.0",
]

# Development tools (linting, type checking, formatting)
dev = [
    "ruff>=0.4.10,<1.0.0",
    "mypy>=1.10.0,<2.0.0",
    "types-PyYAML>=6.0.0,<7.0.0",
    "types-requests>=2.31.0,<3.0.0",
]

# Load and performance testing
profiling = [
    "locust>=2.29.1,<3.0.0",
]

# Security auditing and dependency analysis
security-audit = [
    "pip-audit>=2.6.0,<3.0.0",
    "deptry>=0.12.0,<1.0.0",
]

# Documentation generation
docs = [
    "sphinx>=7.0.0,<8.0.0",
    "sphinx-rtd-theme>=2.0.0,<3.0.0",
]

# Visualization and notebooks (for examples and analysis)
visualization = [
    "matplotlib>=3.8.4,<4.0.0",
    "jupyter>=1.0.0,<2.0.0",
]

# Examples - all optional dependencies for running examples
examples = [
    "matplotlib>=3.8.4,<4.0.0",
]

# Complete development environment (all dev tools + tests)
all-dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "hypothesis>=6.98.3,<7.0.0",
    "httpx>=0.27.0,<1.0.0",
    "ruff>=0.4.10,<1.0.0",
    "mypy>=1.10.0,<2.0.0",
    "types-PyYAML>=6.0.0,<7.0.0",
    "types-requests>=2.31.0,<3.0.0",
    "locust>=2.29.1,<3.0.0",
    "pip-audit>=2.6.0,<3.0.0",
    "deptry>=0.12.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/neuron7x/mlsdm-governed-cognitive-memory"
Repository = "https://github.com/neuron7x/mlsdm-governed-cognitive-memory"
Documentation = "https://github.com/neuron7x/mlsdm-governed-cognitive-memory/blob/main/DOCUMENTATION_INDEX.md"
"Bug Tracker" = "https://github.com/neuron7x/mlsdm-governed-cognitive-memory/issues"

[project.scripts]
mlsdm = "mlsdm.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# ====================================================
# Tool Configuration
# ====================================================

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

# Tests in src/mlsdm/tests should be allowed to have untyped definitions
[[tool.mypy.overrides]]
module = "mlsdm.tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

# NeuroLang extension is an optional PyTorch-based plugin
# Torch typing is complex and unstable, so we use lenient checking
[[tool.mypy.overrides]]
module = "mlsdm.extensions.neuro_lang_extension"
disallow_untyped_defs = false
disallow_untyped_calls = false
check_untyped_defs = false
# Note: This is explicitly an optional extension and does not affect core functionality

# Experimental modules are not part of the stable API
# They are for research/benchmarking purposes and have relaxed type checking
[[tool.mypy.overrides]]
module = "mlsdm.memory.experimental.*"
disallow_untyped_defs = false
disallow_any_generics = false
check_untyped_defs = false
# Note: Experimental modules require optional dependencies and are not production-ready

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
    "--strict-markers",
    "--strict-config",
    "-v",
]
testpaths = ["tests", "src/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "property: marks property-based tests",
    "security: marks security-related tests",
    "neurolang: marks tests that require torch/neurolang dependencies",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "N806",  # Allow uppercase variable names (L1, L2, L3 are scientific notation for memory levels)
    "SIM105",  # contextlib.suppress is less explicit than try-except-pass
    "SIM102",  # Nested ifs can be more readable in some contexts
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/**/*.py" = ["N802", "N803", "N801", "B017", "B007"]  # test naming and test patterns
"src/mlsdm/tests/**/*.py" = ["N802", "N803", "N801", "B017", "B007"]  # test naming and test patterns
"src/mlsdm/utils/metrics.py" = ["N803"]  # Allow L1, L2, L3 parameter names

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.deptry]
# Extend default Python stdlib to include commonly missed modules
extend_exclude = ["tests", "examples", "benchmarks", "scripts"]

# Package to module name mappings for packages that don't follow standard naming
[tool.deptry.package_module_name_map]
opentelemetry-api = "opentelemetry"
opentelemetry-sdk = "opentelemetry"
pyjwt = "jwt"

# Ignore dev-only tools (these are intentionally not imported in src/)
[tool.deptry.per_rule_ignores]
DEP002 = [
    "pytest",
    "pytest-asyncio", 
    "pytest-cov",
    "hypothesis",
    "httpx",
    "ruff",
    "mypy",
    "types-PyYAML",
    "types-requests",
    "locust",
    "pip-audit",
    "deptry",
    "sphinx",
    "sphinx-rtd-theme",
    "matplotlib",
    "jupyter",
    "opentelemetry-api",  # Optional observability
    "opentelemetry-sdk",  # Optional observability
    "sentence-transformers",  # Optional embeddings - not directly imported, checked for availability
]

# Ignore optional dependencies that are intentionally conditional imports
DEP001 = [
    "anthropic",  # Optional LLM provider
    "openai",     # Optional LLM provider
    "redis",      # Optional cache backend
    "torch",      # Optional NeuroLang extension
    "sentence-transformers",  # Optional embeddings
    "fslgs",      # Optional experimental feature
    "opentelemetry",  # Optional observability - provided by opentelemetry-api/sdk
]

# JWT is imported via PyJWT package
DEP003 = [
    "jwt",  # Imported from pyjwt package
]

# ====================================================
# Package Configuration
# ====================================================

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
